# python-sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONFIGURATION.md  LICENSE  README.md  SECURITY.md  Taskfile.yml  lefthook.yml  pyproject.toml
.claude/: CLAUDE.md
.devcontainer/: .env.example  devcontainer.json
.devcontainer/scripts/: post-create.sh
.devcontainer/scripts/lib/: base-setup.sh
.github/: SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/release-please/: config.json  manifest.json
.github/workflows/: ci.yml  release.yml  validate.yaml
docs/: configuration.md
examples/: README.md  claude_install_skills.py  claude_safe_skills.py  inspect_manifest.py  openai_local_hosted.py  pinned_release.py  pull_bundle.py  pydantic_ai_prompts.py
examples/basics/: bundle_resources.py  inspect_manifest.py  pull_bundle.py
examples/claude/: export_plugin.py  install_project_skills.py
examples/openai/: hosted_inline_skill.py  local_shell_skill.py
examples/pydantic_ai/: dynamic_instructions.py  instructions_from_bundle.py  structured_output.py  system_prompt_from_bundle.py
src/musher/: __init__.py  _auth.py  _bundle.py  _cache.py  _cache_info.py  _client.py  _config.py  _errors.py  _export.py  _handles.py  _http.py  _oci.py  _paths.py  _types.py
src/musher/adapters/: __init__.py
tests/: conftest.py  test_auth.py  test_bundle.py  test_cache.py  test_cache_info.py  test_client.py  test_config.py  test_errors.py  test_export.py  test_handles.py  test_http.py  test_paths.py  test_types.py
